[package]
name = "dots-and-boxes"
author = ["Caio Santos <caio.daniel.nunes.santos@gmail.com>"]
version = "0.1.0"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.sdl2]
version = "0.35"
default-features = false
features = ["static-link","bundled"]
