[package]
name = "dots-and-boxes"
authors = ["Caio Santos <caio.daniel.nunes.santos@gmail.com>"]
version = "0.1.0"
license = "MIT"
edition = "2021"
homepage = "https://github.com/caiodanielnunessantos/dots-and-boxes"
readme = "README.md"
description = "Dots and Boxes classic pen and paper game implemented in sdl2-rust"
repository = "https://github.com/caiodanielnunessantos/dots-and-boxes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.sdl2]
version = "0.35"
default-features = false
features = ["static-link","bundled"]
