[package]
name = "dots-and-boxes"
authors = ["Caio Santos <caio.daniel.nunes.santos@gmail.com>"]
version = "0.1.2"
license = "MIT"
edition = "2021"
homepage = "https://github.com/caiodanielnunessantos/dots-and-boxes"
readme = "README.md"
# description = "Dots and Boxes classic pen and paper game implemented in sdl2-rust"
description = "I consent to the transfer of this crate to the first person who asks help@crates.io for it."
repository = "https://github.com/caiodanielnunessantos/dots-and-boxes"

[dependencies]

[dependencies.sdl2]
version = "0.35"
